--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <h1 align="center">CS428 VIRTUAL AUGMENTED REALITY</h1>
     <h2 align="center">Anjali Yadla</h2>
     <p align="center">
-        <a href="HW1.docx" target="_self">HomeWork01</a>
-        <a href="HW1.docx" download><input type="button" value="Download"></a>
+        <a href="./HW1.docx" target="_self">HomeWork01</a>
+        <a href="./HW1.docx" download><input type="button" value="Download"></a>
 
     </p>
 </body>
